Added new resources for fetching attachments and messages from Open-E. Updated the oep-client to use streaming for attachments. Added tests and updated previous tests
