# src/main/java/se/sundsvall/webmessagecollector/api/MessageResource.java
@@ -15,13 +15,16 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletResponse;
+import java.time.LocalDateTime;
 import java.util.List;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.zalando.problem.Problem;
 import org.zalando.problem.violations.ConstraintViolationProblem;
@@ -66,7 +69,7 @@ class MessageResource {
 		return noContent().header(CONTENT_TYPE, ALL_VALUE).build();
 	}
 
-	@GetMapping(value = "attachments/{attachmentId}", produces = {
+	@GetMapping(value = "/attachments/{attachmentId}", produces = {
 		ALL_VALUE, APPLICATION_PROBLEM_JSON_VALUE
 	})
 	@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
@@ -77,7 +80,7 @@ class MessageResource {
 		service.getMessageAttachmentStreamed(attachmentId, response);
 	}
 
-	@DeleteMapping("attachments/{attachmentId}")
+	@DeleteMapping("/attachments/{attachmentId}")
 	@ApiResponse(responseCode = "204", description = "No Content", useReturnTypeSchema = true)
 	@Operation(summary = "Delete a messageAttachment", description = "Deletes a messageAttachment with the specified id")
 	ResponseEntity<Void> deleteAttachment(
@@ -86,5 +89,32 @@ class MessageResource {
 		service.deleteAttachment(attachmentId);
 
 		return noContent().header(CONTENT_TYPE, ALL_VALUE).build();
+	}
+
+	@GetMapping(value = "/{instance}/flow-instances/{flowInstanceId}", produces = {
+		APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE
+	})
+	@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
+	@Operation(summary = "Get a list of messages related to a specific flow instance id", description = "Returns a list of messages found for the specified flow instance id")
+	ResponseEntity<List<MessageDTO>> getMessagesByFlowInstanceId(
+		@Parameter(name = "municipalityId", description = "Municipality Id", example = "2281", required = true) @PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId,
+		@Parameter(name = "instance", description = "Instance to fetch messages for", example = "INTERNAL", required = true) @PathVariable("instance") final String instance,
+		@Parameter(name = "flowInstanceId", description = "Flow instance id to fetch messages for", example = "1234567890", required = true) @PathVariable("flowInstanceId") final String flowInstanceId,
+		@Parameter(name = "fromDateTime", description = "The start date and time for filtering web messages (optional)", example = "2024-01-31T12:00:00") @RequestParam(required = false) @DateTimeFormat(
+			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime fromDateTime,
+		@Parameter(name = "toDateTime", description = "The end date and time for filtering web messages (optional).", example = "2024-01-31T12:00:00") @RequestParam(required = false) @DateTimeFormat(
+			iso = DateTimeFormat.ISO.DATE_TIME) final LocalDateTime toDateTime) {
+		return ok(service.getMessagesByFlowInstanceId(municipalityId, instance.toUpperCase(), flowInstanceId, fromDateTime, toDateTime));
+	}
+
+	@GetMapping(value = "/{instance}/attachments/{attachmentId}", produces = {
+		ALL_VALUE, APPLICATION_PROBLEM_JSON_VALUE
+	})
+	@ApiResponse(responseCode = "200", description = "Successful Operation", useReturnTypeSchema = true)
+	void getAttachmentById(final HttpServletResponse response,
+		@Parameter(name = "municipalityId", description = "Municipality Id", example = "2281", required = true) @PathVariable("municipalityId") @ValidMunicipalityId final String municipalityId,
+		@Parameter(name = "instance", description = "Instance to fetch messages for", example = "INTERNAL", required = true) @PathVariable("instance") final String instance,
+		@Parameter(name = "attachmentId", description = "Id of the requested attachment", example = "1234567890", required = true) @PathVariable("attachmentId") final Integer attachmentId) {
+		service.streamAttachmentById(municipalityId, instance.toUpperCase(), attachmentId, response);
 	}
 }
